<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="15dp"
    tools:context=".view.fragment.ui.EditProfileFragment">

    <RelativeLayout
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="110dp"
            android:layout_height="130dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/my_account_filled"
            tools:ignore="ContentDescription"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="91dp" />

        <ImageView
            android:id="@+id/btnEditPic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignBottom="@id/ivImage"
            android:layout_marginStart="-50dp"
            android:layout_marginTop="-70dp"
            android:layout_toEndOf="@id/ivImage"
            android:src="@drawable/add_button"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <TextView
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:padding="5dp"
        android:background="@drawable/custom_et"
        android:inputType="textPersonName"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_id" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:padding="5dp"
        android:background="@drawable/custom_et"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth" />

    <LinearLayout
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etDate"
            android:layout_width="40dp"
            android:hint="DD"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_et"
            android:inputType="date"
            tools:ignore="Autofill,HardcodedText" />

        <EditText
            android:id="@+id/etMonth"
            android:layout_width="40dp"
            android:hint="MM"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/custom_et"
            android:inputType="date"
            tools:ignore="Autofill,HardcodedText"  />

        <EditText
            android:id="@+id/etYear"
            android:layout_width="70dp"
            android:hint="YYYY"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_et"
            android:inputType="date"
            tools:ignore="Autofill,HardcodedText"  />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <EditText
        android:id="@+id/etContact"
        android:layout_width="50dp"
        android:layout_marginEnd="15dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:padding="5dp"
        android:hint="+91"
        android:background="@drawable/custom_et"
        android:inputType="phone"
        tools:ignore="Autofill,HardcodedText" />

    <EditText
        android:id="@+id/etContactCode"
        android:layout_width="200dp"
        android:maxLength="10"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:padding="5dp"
        android:background="@drawable/custom_et"
        android:inputType="phone"
        tools:ignore="Autofill" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginVertical="10dp"
        android:padding="5dp"
        android:text="Save"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        tools:ignore="HardcodedText" />

</LinearLayout>