<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".view.fragment.ui.ExpandedNewsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Star World Hospital brings in Da Vinci Robotics to ensure precision surgery."
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/archive"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/description"
            android:text="@string/random_text"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:layout_marginVertical="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/category"
                android:text="@string/category"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/time"
                android:text="@string/time"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/followCategory"
                android:text="@string/follow"
                android:layout_alignParentEnd="true"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:layout_marginTop="5dp"
                android:id="@+id/likeNews"
                android:layout_below="@id/followCategory"
                android:src="@drawable/like_outline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_marginTop="5dp"
                android:id="@+id/dislikeNews"
                android:layout_below="@id/followCategory"
                android:layout_toEndOf="@id/likeNews"
                android:layout_marginStart="8dp"
                android:src="@drawable/dislike_outline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>